--- a/rest_server/package.json
+++ b/rest_server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx tsc && node build/server.js",
+    "build": "npx tsc",
     "test": "jest"
   },
   "keywords": [],
