--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    defaults:
+       run:
+         working-directory: ./rest_server/
     strategy:
       matrix:
         node-version: [14.x]
@@ -26,9 +28,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: './rest_server/package-lock.json'
     - run: npm ci
-      working-directory: ./rest_server
     - run: npm run build --if-present
-      working-directory: ./rest_server
     - run: npm test
-      working-directory: ./rest_server
